tooling/nargo_cli/tests/snapshots/execution_failure/conditional_pop_back_from_empty_vector/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Attempt to pop_front from an empty vector
   ┌─ src/main.nr:11:20
   │
11 │     let (_, ret) = s.pop_back();
   │                    ----------
   │
   = Call stack:
     1. src/main.nr:11:20

Failed assertion
